[package]
name = "sui-faucet"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bin-version.workspace = true
clap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
serde.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
futures.workspace = true
uuid.workspace = true
prometheus.workspace = true
scopeguard.workspace = true
tap.workspace = true
ttl_cache.workspace = true
eyre.workspace = true
tempfile.workspace = true
parking_lot.workspace = true
tonic.workspace = true

sui-json-rpc-types.workspace = true
sui-types.workspace = true
sui-config.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
mysten-metrics.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true
shared-crypto.workspace = true
async-recursion.workspace = true
mysten-network.workspace = true

[dev-dependencies]
test-cluster.workspace = true

[[bin]]
name = "one-faucet"
path = "src/bin/one-faucet.rs"
